# number-converter

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: conan.cmake
include/: ascii_table.hpp  converter.hpp  number.hpp  number_converter.hpp  number_printer.hpp
src/: .clang-format  .gitignore  CMakeLists.txt  ascii_table.h  ascii_table.hpp  convert.c  convert.cpp  convert.h  converter.cpp  main.c  main.cpp  makefile  number.cpp  number.hpp  number_converter.cpp  number_printer.cpp
test/: CMakeLists.txt  converter_test.cpp  main_test.cpp
